--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,8 @@
     "copy-html-entry": "cp ../pwit/public/frontend/index.html ../pwit/www/frontend.html"
   },
   "dependencies": {
+    "@headlessui/vue": "^1.7.23",
+    "@heroicons/vue": "^2.1.5",
     "socket.io-client": "^4.5.1",
     "vue": "^3.5.12",
     "vue-router": "^4"
