--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,7 +14,8 @@
     "@heroicons/vue": "^2.1.5",
     "socket.io-client": "^4.5.1",
     "vue": "^3.5.12",
-    "vue-router": "^4"
+    "vue-router": "^4",
+    "vue3-toastify": "^0.2.4"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.1.4",
