--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@headlessui/vue": "^1.7.23",
     "@heroicons/vue": "^2.1.5",
+    "lucide-vue-next": "^0.454.0",
     "socket.io-client": "^4.5.1",
     "vue": "^3.5.12",
     "vue-router": "^4",
