--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,9 +5,9 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build --base=/assets/pwit/frontend/ && yarn copy-html-entry",
+    "build": "vite build --base=/assets/pwit/pwit/ && yarn copy-html-entry",
     "preview": "vite preview",
-    "copy-html-entry": "cp ../pwit/public/frontend/index.html ../pwit/www/frontend.html"
+    "copy-html-entry": "cp ../pwit/public/pwit/index.html ../pwit/www/pwit.html"
   },
   "dependencies": {
     "@headlessui/vue": "^1.7.23",
