--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,8 +12,10 @@
   "dependencies": {
     "@headlessui/vue": "^1.7.23",
     "@heroicons/vue": "^2.1.5",
+    "frappe-ui": "^0.1.72",
     "lucide-vue-next": "^0.454.0",
     "socket.io-client": "^4.5.1",
+    "vite-plugin-pwa": "^0.20.5",
     "vue": "^3.5.12",
     "vue-router": "^4",
     "vue3-toastify": "^0.2.4"
