--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "@heroicons/vue": "^2.1.5",
     "firebase": "^11.0.2",
     "frappe-ui": "^0.1.72",
+    "html2pdf.js": "^0.10.2",
     "lucide-vue-next": "^0.454.0",
     "socket.io-client": "^4.5.1",
     "vite-plugin-pwa": "^0.20.5",
