--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "vite-plugin-pwa": "^0.20.5",
     "vue": "^3.5.12",
     "vue-router": "^4",
+    "vue3-popper": "^1.5.0",
     "vue3-toastify": "^0.2.4"
   },
   "devDependencies": {
