--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build --base=/assets/pwit/pwit/ && yarn copy-html-entry",
+    "build": "yarn install && vite build --base=/assets/pwit/pwit/ && yarn copy-html-entry",
     "preview": "vite preview",
     "copy-html-entry": "cp ../pwit/public/pwit/index.html ../pwit/www/pwit.html"
   },
