--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,7 +20,7 @@
     "vue": "^3.5.12",
     "vue-router": "^4",
     "vue3-popper": "^1.5.0",
-    "vue3-toastify": "^0.2.4"
+    "vue3-toastify": "0.2.2"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.1.4",
